GNOME Bugzilla – Bug 668736
Incorrect argument is passed for page index when command is spawned
Last modified: 2012-02-05 11:34:36 UTC
Created attachment 206180 [details] [review] Fix page index argument when command is spawned The code which generates a command line when evince wants to spawn another instance of itself is wrong. It uses the --page-label argument when it should use --page-index.
Created attachment 206183 [details] [review] Second attempt It's not just the option that's wrong, the value is incorrect too. Internally page indices are zero-based but on the command line they start from one.
Review of attachment 206183 [details] [review]: Good catch!, pushed to git master, thank you.