Fix page index argument when command is spawned

https://bugzilla.gnome.org/show_bug.cgi?id=668736